Bug 152436 - FILESAVE: PPTX: Ole object disappears after RT
Summary: FILESAVE: PPTX: Ole object disappears after RT
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha1+
Hardware: All All
: medium normal
Assignee: Tünde Tóth
URL:
Whiteboard: target:7.6.0 target:7.5.0.0.beta2 tar...
Keywords: bibisected, bisected, regression
Depends on:
Blocks: PPTX-OLE
  Show dependency treegraph
 
Reported: 2022-12-09 13:10 UTC by Xisco Faulí
Modified: 2023-01-24 12:28 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2022-12-09 13:10:07 UTC
Steps to reproduce:
1. Open attachment 82991 [details] from bug 67297
2. Save it to PPTX
3. Open the new generated file

-> The OLE object is gone

Reproduced in

Version: 7.5.0.0.beta1+ (X86_64) / LibreOffice Community
Build ID: f561cf425cda33fa1c688dac14be052e116ce0f6
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2022-12-09 13:11:02 UTC
Regression introduced by:

author	Tünde Tóth <toth.tunde@nisz.hu>	2022-09-13 10:29:03 +0200
committer	László Németh <nemeth@numbertext.org>	2022-09-28 14:16:50 +0200
commit adc042f95d3dbd65b778260025d59283146916e5 (patch)
tree be039e80dd6ca2d4b2d8d2baa4c5af0f5ae11ebd
parent 36003e7644014cde9330bf45fee3815278a74035 (diff)
tdf#124333 PPTX import: fix Z-order of embedded OLE objects

Bisected with: bibisect-linux64-7.5

Adding Cc: to Tünde Tóth
Comment 2 Commit Notification 2022-12-19 11:47:27 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/907da02bf8b33c080538731864225b3c44251328

tdf#152436 PPTX export regression: fix lost shape at missing object

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2022-12-20 07:50:56 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/b3ed83265c1ba0c6d15be0bafd6d16b9a87cc64a

tdf#152436 PPTX export regression: fix lost shape at missing object

It will be available in 7.5.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2022-12-21 07:23:47 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/77e050e785cc7bdeff8c3b7746737499f0e0b381

tdf#152436 PPTX export regression: fix lost shape at missing object

It will be available in 7.4.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 NISZ LibreOffice Team 2022-12-21 10:06:47 UTC
Verified in:
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 7d948d5c7edbbfd29a77b97a5101aa43917e5ec2
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded
Comment 6 Xisco Faulí 2023-01-24 10:36:21 UTC
7.4.5 was a hotfix release, updating target in status-whiteboard