sd/qa/unit/export-tests-ooxml3.cxx
@@ -122,6 +122,7 @@ public:
     void testTdf94122_autoColor();
     void testTdf124333();
     void testAutofittedTextboxIndent();
+    void testTdf152436();
 
     CPPUNIT_TEST_SUITE(SdOOXMLExportTest3);
 
@@ -210,6 +211,7 @@ public:
     CPPUNIT_TEST(testTdf94122_autoColor);
     CPPUNIT_TEST(testTdf124333);
     CPPUNIT_TEST(testAutofittedTextboxIndent);
+    CPPUNIT_TEST(testTdf152436);
     CPPUNIT_TEST_SUITE_END();
 
     virtual void registerNamespaces(xmlXPathContextPtr& pXmlXPathCtx) override
@@ -2237,6 +2239,23 @@ void SdOOXMLExportTest3::testAutofittedTextboxIndent()
     xmlDocUniquePtr pXmlDocContent1 = parseExport(tempFile, "ppt/slides/slide1.xml");
     assertXPath(pXmlDocContent1, "/p:sld/p:cSld/p:spTree/p:sp/p:txBody/a:p[1]/a:pPr", "marL",
                 "691200");
+}
+
+void SdOOXMLExportTest3::testTdf152436()
+{
+    ::sd::DrawDocShellRef xDocShRef
+        = loadURL(m_directories.getURLFromSrc(u"/sd/qa/unit/data/pptx/ole-emf_min.pptx"), PPTX);
+
+    CPPUNIT_ASSERT_EQUAL_MESSAGE("number of shapes is incorrect", sal_Int32(1),
+                                 getPage(0, xDocShRef)->getCount());
+
+    xDocShRef = saveAndReload(xDocShRef.get(), PPTX);
+
+    // Check number of shapes after export.
+    CPPUNIT_ASSERT_EQUAL_MESSAGE("number of shapes is incorrect after export", sal_Int32(1),
+                                 getPage(0, xDocShRef)->getCount());
+
+    xDocShRef->DoClose();
 }
 
 CPPUNIT_TEST_SUITE_REGISTRATION(SdOOXMLExportTest3);
